--- a/.github/workflows/ci-myapp.yml
+++ b/.github/workflows/ci-myapp.yml
@@ -34,7 +34,6 @@ jobs:
     - name: Test with pytest
       run: |
         cd src/myapp
+        export PYTHONPATH=/src:
         pytest tests
-      env:
-        PYTHONPATH: /src:
 
