--- a/.github/workflows/ci-myapp.yml
+++ b/.github/workflows/ci-myapp.yml
@@ -24,7 +24,8 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install flake8 pytest
-        if [ -f requirements.txt ]; then pip install -r src/myapp/requirements.txt; fi
+        # if [ -f requirements.txt ]; then pip install -r src/myapp/requirements.txt; fi
+        pip install -r src/myapp/requirements.txt
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
