--- a/.github/workflows/ci-myapp.yml
+++ b/.github/workflows/ci-myapp.yml
@@ -14,6 +14,24 @@ jobs:
 
     runs-on: ubuntu-18.04
 
+    services:
+      mysql:
+        image: mysql:5.7
+        env:
+          MYSQL_ALLOW_EMPTY_PASSWORD: yes
+          MYSQL_DATABASE: MYDB
+        ports:
+          - 3306
+        options:
+          --health-cmd="mysqladmin ping"
+          --health-interval=10s
+          --health-timeout=5s
+          --health-retries=3
+      redis:
+        image: redis
+        ports:
+          - 6379/tcp
+
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python 3.8
@@ -32,6 +50,13 @@ jobs:
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+    - name: verify MySQL connection from host
+      run: |
+        mysql --version
+        sudo apt-get install -y mysql-client
+        sudo service mysql start
+        mysql -e "CREATE DATABASE MYDB"
+        mysql -e "SHOW DATABASES"
     - name: Test with pytest
       run: |
         cd src/myapp
