--- a/.github/workflows/ci-myapp.yml
+++ b/.github/workflows/ci-myapp.yml
@@ -55,8 +55,8 @@ jobs:
         mysql --version
         sudo apt-get install -y mysql-client
         sudo service mysql start
-        mysql -uroot -e "CREATE DATABASE MYDB"
-        mysql -uroot -e "SHOW DATABASES"
+        mysql -uroot -p'' -e "CREATE DATABASE MYDB"
+        mysql -uroot -p'' -e "SHOW DATABASES"
     - name: Test with pytest
       run: |
         cd src/myapp
