--- a/.github/workflows/ci-myapp.yml
+++ b/.github/workflows/ci-myapp.yml
@@ -20,6 +20,7 @@ jobs:
         env:
           MYSQL_USER: test
           MYSQL_PASSWORD: test
+          MYSQL_ROOT_PASSWORD: root
           MYSQL_DATABASE: MYDB
         ports:
           - 3306
@@ -56,8 +57,8 @@ jobs:
         mysql --version
         sudo apt-get install -y mysql-client
         sudo service mysql start
-        mysql -utest -ptest -e "CREATE DATABASE MYDB"
-        mysql -utest -ptest -e "SHOW DATABASES"
+        mysql -uroot -proot -e "CREATE DATABASE MYDB"
+        mysql -uroot -proot -e "SHOW DATABASES"
     - name: Test with pytest
       run: |
         cd src/myapp
