--- a/.github/workflows/ci-myapp.yml
+++ b/.github/workflows/ci-myapp.yml
@@ -59,6 +59,7 @@ jobs:
         sudo service mysql start
         mysql -uroot -proot -e "CREATE DATABASE MYDB"
         mysql -uroot -proot -e "SHOW DATABASES"
+        mysql -utest -ptest -e "SHOW DATABASES"
     - name: Test with pytest
       run: |
         cd src/myapp
